--- a/style.css
+++ b/style.css
@@ -1,1 +1,116 @@
 
+body {
+    overflow-x: hidden;
+}
+
+main {
+    margin-top: 4.5rem;
+    overflow-x: hidden;
+}
+
+.text-center {
+    color: #a09e9e;
+}
+
+.fundo-animado {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #222;
+    perspective: 300px;
+    perspective-origin: center;
+    z-index: -1;
+}
+
+.box {
+    background: linear-gradient(90deg, #222, #fc466b, #3f5efb);
+    border-radius: 50%;
+    width: 500px;
+    height: 100%;
+    animation: example 5s infinite alternate;
+    filter: blur(150px);
+}
+
+
+
+
+@keyframes example {
+    0% {
+        transform: rotateY(30deg) rotate(-25deg) translate(100px);
+    }
+    25% {
+        transform: rotateY(-30deg) translateZ(100px);
+    }
+    50% {
+        transform: rotateX(-50deg) translateZ(-100px);
+    }
+    75% {
+        transform: rotateX(-50deg) translateZ(-100px);
+    }
+    100% {
+        transform: rotateX(20deg) translateZ(0);
+    }
+}
+
+
+.navbar-brand img {
+    width: 50px;
+}
+
+.carousel-item {
+    height: 500px;
+}
+
+.carousel-item img {
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.carousel-item::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(transparent, rgb(31, 31, 31));
+    position: absolute;
+}
+
+.card-projetos {
+    background-color: #ffffff;
+    height: 600px;
+    margin: 2rem;
+    border-radius: 15px;
+}
+
+.card-title a {
+    text-decoration: none;
+    color: #222;
+    font-weight: bold;
+}
+
+
+.card-projetos img {
+    height: 300px;
+    background-color: #222;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+
+.botoes-info {
+    display: flex;
+    flex-wrap: wrap; /* Permite que quebrem para a linha de baixo se não couberem */
+    gap: 10px; /* Adiciona um espaçamento entre os botões */
+    justify-content: center;
+}
+
+.collapse-horizontal .card {
+    min-width: 300px; /* Define um tamanho mínimo */
+    max-width: 100%;
+    transition: width 0.4s ease-in-out;
+}
